<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_news"
            android:icon="@drawable/ic_menu_news"
            android:title="@string/menu_news" />
        <item
            android:id="@+id/nav_stats_single"
            android:icon="@drawable/ic_menu_stats"
            android:title="@string/menu_stats_single" />
        <!--<item-->
            <!--android:id="@+id/nav_stats_collective"-->
            <!--android:icon="@drawable/ic_menu_stats_multiple"-->
            <!--android:title="@string/menu_stats_multiple" />-->
        <item
            android:id="@+id/nav_liders"
            android:icon="@drawable/ic_menu_liders"
            android:title="@string/menu_liders" />
        <!-- <item
             android:id="@+id/nav_history"
             android:icon="@drawable/ic_menu_dayhistory"
             android:title="@string/menu_todayhistory" />
             -->
         <item
             android:id="@+id/nav_help"
             android:icon="@drawable/ic_menu_help"
             android:title="@string/menu_help" />
     </group>

 </menu>
