<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/content_stats_hitters"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    android:background="@android:color/white">

    <LinearLayout
        android:id="@+id/layoutStatsHittersLegend"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginBottom="@dimen/margin_4">

        <LinearLayout
            android:id="@+id/layoutStatsHittersLegendNormal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:paddingTop="@dimen/margin_16"
            android:paddingBottom="@dimen/margin_4"
            android:paddingLeft="18dp"
            android:layout_marginRight="@dimen/margin_16">
            <ImageView
                android:layout_width="48dp"
                android:layout_height="14dp"
                android:scaleType="centerInside"
                android:layout_marginRight="@dimen/margin_4"
                android:visibility="invisible"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="horizontal"
                    android:weightSum="8">
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/label_average"
                        android:textSize="11sp"
                        android:textColor="@color/md_grey_500"
                        android:gravity="center"
                        android:layout_weight="1"/>
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/label_hits"
                        android:textSize="11sp"
                        android:textColor="@color/md_grey_500"
                        android:gravity="center"
                        android:layout_weight="1"/>
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/label_runs"
                        android:textSize="11sp"
                        android:textColor="@color/md_grey_500"
                        android:gravity="center"
                        android:layout_weight="1"/>
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/label_runsimpulsed"
                        android:textSize="11sp"
                        android:textColor="@color/md_grey_500"
                        android:gravity="center"
                        android:layout_weight="1"/>
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/label_homeruns"
                        android:textSize="11sp"
                        android:textColor="@color/md_grey_500"
                        android:gravity="center"
                        android:layout_weight="1"/>
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/label_obp"
                        android:textSize="11sp"
                        android:textColor="@color/md_grey_500"
                        android:gravity="center"
                        android:layout_weight="1"/>
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/label_ops"
                        android:textSize="11sp"
                        android:textColor="@color/md_grey_500"
                        android:gravity="center"
                        android:layout_weight="1"/>
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/label_ballkk"
                        android:textSize="11sp"
                        android:textColor="@color/md_grey_500"
                        android:gravity="center"
                        android:layout_weight="1"/>
                </LinearLayout>
            </LinearLayout>

        </LinearLayout>
        <LinearLayout
            android:id="@+id/layoutStatsHittersLegendSpecial"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:paddingTop="@dimen/margin_16"
            android:paddingBottom="@dimen/margin_4"
            android:paddingLeft="18dp"
            android:layout_marginRight="@dimen/margin_16"
            android:visibility="gone">
            <ImageView
                android:layout_width="48dp"
                android:layout_height="14dp"
                android:scaleType="centerInside"
                android:layout_marginRight="@dimen/margin_4"
                android:visibility="invisible"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="horizontal"
                    android:weightSum="5">
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/label_cpr"
                        android:textSize="11sp"
                        android:textColor="@color/md_grey_500"
                        android:gravity="center"
                        android:layout_weight="1"/>
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/label_ccr"
                        android:textSize="11sp"
                        android:textColor="@color/md_grey_500"
                        android:gravity="center"
                        android:layout_weight="1"/>
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/label_babip"
                        android:textSize="11sp"
                        android:textColor="@color/md_grey_500"
                        android:gravity="center"
                        android:layout_weight="1"/>
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/label_db"
                        android:textSize="11sp"
                        android:textColor="@color/md_grey_500"
                        android:gravity="center"
                        android:layout_weight="1"/>
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/label_bbcb"
                        android:textSize="11sp"
                        android:textColor="@color/md_grey_500"
                        android:gravity="center"
                        android:layout_weight="1"/>
                </LinearLayout>
            </LinearLayout>

        </LinearLayout>

    </LinearLayout>

    <androidx.swiperefreshlayout.widget.SwipeRefreshLayout
        android:id="@+id/swipeRefresh"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/layoutStatsHittersLegend"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true">
        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/recycler_stats_hitters"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            style="@style/scrollbarStats"
            app:layout_behavior="@string/appbar_scrolling_view_behavior" />
        <TextView
            android:id="@+id/noData"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/label_no_more_data"
            android:textSize="14sp"
            android:textColor="@color/md_grey_500"
            android:gravity="center"
            android:layout_weight="1"
            android:visibility="gone"
            android:layout_below="@id/recycler_stats_hitters"/>
    </androidx.swiperefreshlayout.widget.SwipeRefreshLayout>
</RelativeLayout>
