<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/content_favorites"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingTop="@dimen/margin_16"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    android:background="@android:color/white">

    <LinearLayout
        android:id="@+id/layoutQualificationLegend"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginBottom="@dimen/margin_4"
        android:weightSum="7">

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/label_team"
            android:layout_weight="3"
            android:layout_marginLeft="60dp"
            android:textSize="11sp"/>

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/label_jj"
            android:layout_weight="1"
            android:gravity="center_horizontal"
            android:textSize="11sp"/>

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/label_jg"
            android:layout_weight="1"
            android:gravity="center_horizontal"
            android:textSize="11sp"/>

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/label_jp"
            android:layout_weight="1"
            android:gravity="center_horizontal"
            android:textSize="11sp"/>

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/label_average"
            android:layout_weight="1"
            android:gravity="center_horizontal"
            android:textSize="11sp"/>

    </LinearLayout>

    <androidx.swiperefreshlayout.widget.SwipeRefreshLayout
        android:id="@+id/swipeRefreshQualification"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/layoutQualificationLegend"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true">
        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/recycler_position_list"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_behavior="@string/appbar_scrolling_view_behavior"
            style="@style/scrollbar"/>
    </androidx.swiperefreshlayout.widget.SwipeRefreshLayout>

</RelativeLayout>
